# ai-edit

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  TODO.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup_dev.py  venv.rc
ai_edit/: __init__.py  __main__.py  _version.py  cli.py
ai_edit/config/: __init__.py  manager.py
ai_edit/core/: __init__.py  ai_client.py  context.py  file_manager.py
ai_edit/prompts/: add_prompt.txt  commit_prompt.txt  dev_prompt.txt  edit_prompt.txt  few_shot_examples.txt  fix_prompt.txt  modify_prompt.txt  refactor_prompt.txt  test_prompt.txt  todo_prompt.txt
ai_edit/utils/: __init__.py  diff.py  git.py  parser.py
tests/: test_cli.py  test_config.py  test_diff.py
